fix: update footer heading color to improve contrast

--- a/garage/src/scss/_footer.scss
+++ b/garage/src/scss/_footer.scss
@@ -5,7 +5,7 @@
 }
 
 footer h5 {
-  color: $gray-400;
+  color: $gray-300;
 }
 
 footer .nav-link {
